content/docs/0.7.x/reference/cli/commands/keptn_auth.md
---
date: "2020-07-21T16:03:07+02:00"
title: "keptn auth"
slug: keptn_auth
---
## keptn auth

Authenticates the Keptn CLI against a Keptn installation

### Synopsis

Authenticates the Keptn CLI against a Keptn installation using an endpoint
and an API token. The endpoint and API token are automatically configured during the Keptn installation.
If the authentication is successful, the endpoint and the API token are stored in a password store of the underlying operating system.
More precisely, the keptn CLI stores the endpoint and API token using *pass* in case of Linux, using *Keychain* in case of macOS, or *Wincred* in case of Windows.

**Note**: If you receive a warning *Using a file-based storage for the key because the password-store seems to be not set up.* this is because a password store could not be found in your environment. In this case, the credentials are stored in *~/.keptn/.keptn* in your home directory.
	

```
keptn auth --endpoint=https://api.keptn.MY.DOMAIN.COM --api-token=SECRET_TOKEN [flags]
```

### Examples

```
keptn auth --endpoint=https://api.keptn.MY.DOMAIN.COM --api-token=abcd-0123-wxyz-7890
```

### Options

```
  -a, --api-token string   The API token to communicate with the Keptn installation
  -e, --endpoint string    The endpoint exposed by the Keptn installation (e.g., api.keptn.127.0.0.1.xip.io)
  -h, --help               help for auth
```

### Options inherited from parent commands

```
      --mock                 mocking of server communication - ATTENTION: your commands will not be sent to the keptn server
  -q, --quiet                suppress debug and info output
      --suppress-websocket   disables websocket communication - use the ID of Keptn context (if provided) for checking the result of your command
  -v, --verbose              verbose logging
```

### SEE ALSO

* [keptn](../keptn/)	 - This is a CLI for using keptn

###### Auto generated by spf13/cobra on 21-Jul-2020
